--- a/templates/eventnews.tmpl
+++ b/templates/eventnews.tmpl
@@ -7,16 +7,7 @@
 </div>
 
 <div id="p-list" class="p-list">
-	<h4 class="title">News Articles</h4>
-	
-<!-- 
-	<div class="p-box box rounded">
-		<h2>Air Fair</h2>
-		<p>May 2, 2015</p>
-		<p>sdasdasdsadsads<br />adasdasdasdsd ds adas dad</p>
-	</div>
- -->
-	
+	<h4 class="title">Articles Archive</h4>
 </div>
 
 <script type="text/javascript" src="/date.js"></script>
