--- a/templates/exhibits.tmpl
+++ b/templates/exhibits.tmpl
@@ -9,9 +9,9 @@
 
 <div class="pure-menu pure-menu-horizontal">
     <ul class="pure-menu-list">
-        <li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Aircraft</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Vehicles</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Projects</a></li>
+        <li id="pp" class="pure-menu-item pure-menu-selected"><a href=" javascript:setExhibits('pp') " class="pure-menu-link">Aircraft</a></li>
+        <li id="vv" class="pure-menu-item"><a href=" javascript:setExhibits('vv') " class="pure-menu-link">Vehicles</a></li>
+        <li id="pr" class="pure-menu-item"><a href="javascript:setExhibits('pr')" class="pure-menu-link">Projects</a></li>
     </ul>
 </div>
 
