--- a/templates/home.tmpl
+++ b/templates/home.tmpl
@@ -33,7 +33,7 @@
 
 	<div class="pure-g ">
 	
-		<div class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+		<div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-2 pure-u-lg-1-4">
 			<div class="l-box rounded">
 				<a href="/eventnews">
 					<h3>Calendar and News</h3>
@@ -43,7 +43,7 @@
 			</div>
 		</div>
 
-		<div class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+		<div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-2 pure-u-lg-1-4">
 			<div class="l-box rounded">
 				<a href="/info">
 					<h3>General Information</h3>
@@ -53,7 +53,7 @@
 			</div>
 		</div>
 
-		<div class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+		<div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-2 pure-u-lg-1-4">
 			<div class="l-box rounded">
 				<a href="/exhibits">
 					<h3>Museum Exhibits</h3>
@@ -63,9 +63,9 @@
 			</div>
 		</div>
 
-		<div class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
+		<div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-2 pure-u-lg-1-4">
 			<div class="l-box rounded">
-				<a href="#">
+				<a href="/media">
 					<h3>Media</h3>
 					<img class="pure-img l-box-img center" src="/imgs/computer.png" alt="By Sylwia Bartyzel from unsplash.com">
 					<p>Watch and browse fun and informative media.</p>
