--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -10,7 +10,7 @@
     <script src="/assets/jquery/jquery-latest.min.js"></script>
     
 	<link rel="stylesheet" href="/assets/pure/pure-min.css">
-	<link rel="stylesheet" href="custom.css">
+	<link rel="stylesheet" href="/custom.css">
 	
 
 	
@@ -48,7 +48,7 @@
 
 <!-- <li class="pure-menu-item"><a href="#" class="pure-menu-link white">+Give</a></li> -->
 
-{{template "content"}}
+{{template "content" .PageData}}
 
 </body>
 </html>
