--- a/templates/exhibits.tmpl
+++ b/templates/exhibits.tmpl
@@ -8,7 +8,7 @@
 <h4 class="title">Exhibits of the Pioneer Flight Museum</h4>
 
 <div class="pure-menu pure-menu-horizontal">
-    <ul class="pure-menu-list">
+    <ul class="pure-menu-list subTitle">
         <li id="pp" class="pure-menu-item pure-menu-selected"><a href=" javascript:setExhibits('pp') " class="pure-menu-link">Aircraft</a></li>
         <li id="vv" class="pure-menu-item"><a href=" javascript:setExhibits('vv') " class="pure-menu-link">Vehicles</a></li>
         <li id="pr" class="pure-menu-item"><a href="javascript:setExhibits('pr')" class="pure-menu-link">Projects</a></li>
