Date Fix, UI changes.

--- a/templates/eventnews.tmpl
+++ b/templates/eventnews.tmpl
@@ -7,7 +7,7 @@
 </div>
 
 <div id="p-list" class="p-list">
-	<h4 class="title">Articles Archive</h4>
+	<h4 class="title">News Archive</h4>
 </div>
 
 <script type="text/javascript" src="/date.js"></script>
