--- a/templates/home.tmpl
+++ b/templates/home.tmpl
@@ -47,7 +47,7 @@
 			<div class="l-box rounded">
 				<a href="/info">
 					<h3>General Information</h3>
-					<img class="pure-img l-box-img center" src="/imgs/news.png" alt="By Sylwia Bartyzel from unsplash.com">
+					<img class="pure-img l-box-img center" src="/imgs/newsbb.png" alt="By Sylwia Bartyzel from unsplash.com">
 					<p>Information for fly-in's or the aerodrome's daily operations.</p>
 				</a>
 			</div>
