--- a/templates/media.tmpl
+++ b/templates/media.tmpl
@@ -3,7 +3,7 @@
 <div class="content">
 	<br />
 	<h4 class="title">Media... coming soon.</h4>
-
+	<p>Sorry, this page is still in development. Please check back later.</p>
 </div>
 
 {{end}}
