--- a/www/custom.css
+++ b/www/custom.css
@@ -96,7 +96,21 @@ body{
 
 .i-box h2 {
 	font-weight: normal;
-	font-size: 1.5em; 
+	font-size: 1.4em; 
+	color: #282828;
+}
+
+.i-box h3 {
+	font-weight: normal;
+	font-size: 1.0em; 
+	color: #282828;
+}
+
+.i-box p {
+	color: #383838;
+}
+
+.e-box li {
 	color: #383838;
 }
 
