--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Pioneer Flight Museum.">
 
-    <title>Pioneer Flight Museum &ndash; Home</title>
+    <title>PFM &ndash; {{.Title}}</title>
     
     <script src="/assets/jquery/jquery-latest.min.js"></script>
     
