--- a/templates/home.tmpl
+++ b/templates/home.tmpl
@@ -31,7 +31,7 @@
 		
 	</div>
 
-	<div class="pure-g ">
+	<nav class="pure-g ">
 	
 		<div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-2 pure-u-lg-1-4">
 			<div class="l-box rounded">
@@ -73,7 +73,7 @@
 			</div>
 		</div>
 			
-    </div>
+	</nav>
 
 <!-- 
 	<div class="pure-g ">
