--- a/templates/home.tmpl
+++ b/templates/home.tmpl
@@ -85,10 +85,13 @@
 	</div>
 	</div>  
  -->  
+	<br/>
+	<div class="box rounded shadowed">
+	<p class="center detail">Featured Media</p>
 	<div class=" l-img">
 		<img class="pure-img center" src="/imgs/Kingsbury105.png" alt="By Sylwia Bartyzel from unsplash.com">
 	</div>
-
+	</div>
 	
 	<script type="text/javascript" src="/date.js"></script>
 	<script type="text/javascript" src="/posts.js"></script>
